--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -47,6 +47,9 @@ dependencies:
   freezed_annotation: ^3.1.0
   json_annotation: ^4.10.0
   intl: ^0.20.2
+  flutter_markdown: ^0.7.7+1
+  collection: ^1.19.1
+  google_fonts: ^6.2.1
 
 dev_dependencies:
   flutter_test:
