docs: 为数据同步、总结模块添加中文注释并优化响应式布局
1. 为 lib/features/settings/domain/services/data_sync_config_service.dart 添加详细的中文文档。
2. 完善总结模块（SummaryPage, RawDataView, Dashboard）的中文注释。
3. 对 MainScaffold 响应式布局进行最终优化，确保 Windows/Pad/手机 切换逻辑准确。
4. 整理并提交设置页面及相关服务的遗留变更。

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -68,6 +68,9 @@ dependencies:
   uuid: ^4.5.2
   shelf_router: ^1.1.4
   drift_flutter: ^0.2.8
+  minio: ^3.5.8
+  webdav_client: ^1.2.2
+  window_manager: ^0.5.1
 
 dev_dependencies:
   flutter_test:
@@ -100,6 +103,7 @@ flutter:
   assets:
     - assets/images/
     - assets/icon/
+    - assets/ai_provider_icon/
   #   - images/a_dot_burr.jpeg
   #   - images/a_dot_ham.jpeg
 
