--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -71,6 +71,8 @@ dependencies:
   minio: ^3.5.8
   webdav_client: ^1.2.2
   window_manager: ^0.5.1
+  slang: ^4.12.1
+  slang_flutter: ^4.12.1
 
 dev_dependencies:
   flutter_test:
@@ -88,6 +90,7 @@ dev_dependencies:
   freezed: ^3.2.5
   json_serializable: ^6.12.0
   flutter_launcher_icons: ^0.14.4
+  slang_build_runner: ^4.12.1
 
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
