--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -73,6 +73,9 @@ dependencies:
   window_manager: ^0.5.1
   slang: ^4.12.1
   slang_flutter: ^4.12.1
+  yaml: ^3.1.3
+  yaml_writer: ^2.1.0
+  sqflite: ^2.4.2
 
 dev_dependencies:
   flutter_test:
